src/core/styles/components.css
@layer components {
  /* NOTE: Para marcación de páginas */
  .page-main {
    @apply bg-[#f5f5f5] w-full p-4 *:max-w-6xl flex flex-col gap-4 items-center h-min;

    & > header {
      @apply p-6 pb-0 w-full flex justify-between;

      & > h3 {
        @apply text-primary;
      }
    }
  }

  /* NOTE: Para la tabla del log */
  .table-logs {
    @apply border border-primary/30 rounded-lg mb-2 overflow-hidden;

    & > table {
      @apply table-fixed w-full bg-white;

      & thead {
        @apply bg-muted/30 [&_th]:py-1 border-b border-b-primary/30 text-left text-primary [&_th]:font-normal [&_th]:text-base;
      }

      & tr {
        @apply hover:bg-muted;
      }

      & td,
      & th {
        @apply px-3 py-1;

        /* NOTE: Col id */
        &:first-child {
          @apply w-[30%];
        }

        /* NOTE: Cols fecha y usuario */
        &:nth-child(2),
        &:nth-child(3) {
          @apply w-[15%];
        }

        /* NOTE: Col tipo */
        &:nth-child(4) {
          @apply w-[10%];
        }

        /* NOTE: Col descripcion completa el 100% */

        /* NOTE: Col acción */
        &:last-child {
          @apply w-[10%] text-center;
        }
      }
    }
  }

  /* NOTE: Para inputs de lista */
  .table-form-display-container {
    @apply border border-primary/30 rounded-lg mb-2 overflow-hidden;
  }

  .table-form-display {
    @apply table-fixed w-full bg-white;

    & thead {
      @apply bg-muted/30 [&_th]:py-1 border-b border-b-primary/30 text-left text-primary [&_th]:font-normal [&_th]:text-base;
    }

    & tr {
      @apply hover:bg-muted;
    }

    & td,
    & th {
      @apply px-2;
    }
  }

  .table-form-actions {
    @apply p-0! m-0! *:p-0! *:m-0 text-right flex gap-1 justify-end;
  }

  .form-input-list {
    @apply flex flex-wrap gap-2 [&>button]:flex-[1_0_210px] [&>div]:flex-[1_0_210px] [&>div]:last:flex-0 justify-end items-end;
  }

  /* NOTE: pantalla de loading */
  .loading-backdrop {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(66, 66, 66, 0.6);
    display: flex;
    align-items: center;
    justify-content: center;

    & .loading-wrapper {
      padding: 75px 30px 0;
      width: 260px;
      height: 260px;
      border-radius: 50%;
      background-color: rgba(255, 255, 255, 1);
      box-sizing: border-box;

      & h2 {
        text-transform: uppercase;
        color: #ea485f;
      }

      & .loading-bars {
        display: flex;
        justify-content: center;
        height: 60px;
        transform: rotate(180deg) scale(1.5);

        & .bar {
          display: inline-block;
          width: 13px;
          height: 15px;
          margin: 0 2px;

          &:nth-last-child(1) {
            animation: loadingA 1.5s 1s infinite;
            background-color: #d65e6e;
          }

          &:nth-last-child(2) {
            animation: loadingA 1.5s 0.5s infinite;
            background-color: #e84a5f;
          }

          &:nth-last-child(3) {
            animation: loadingA 1.5s 0s infinite;
            background-color: #e32759;
          }
        }
      }
    }
  }

  /* NOTE: iconos de los modulos */
  .moduleIcon {
    @apply block w-14 h-14 bg-contain float-right bg-no-repeat bg-center;

    &.ConsultasGeográficas {
      background-image: url("src/core/assets/geografico.png");
      filter: invert(1);
    }
    &.Indicadores {
      background-image: url("src/core/assets/indicadores.png");
      filter: invert(1);
    }
    &.Portafolios {
      background-image: url("src/core/assets/portafolios.png");
      filter: invert(1);
    }
    &.CompensaciónAmbiental {
      background-image: url("src/core/assets/compensaciones.png");
    }
    &.MonitoreoComunitario {
      background-image: url("src/core/assets/mcomunitario.png");
      filter: invert(1);
    }
  }
}

